--- a/pagina 2/css/estilospag.css
+++ b/pagina 2/css/estilospag.css
@@ -1,21 +1,13 @@
 * {
 	margin: 0;
 	padding: 0;
+	
 }
 ul,ol{
 	list-style: none;	
 }
 header{
 	width: 100%;
-}
-nav{
-	width: 100%;
-	height: 41px;
-	margin: 3px 0px 20px 0px;
-	overflow: hidden;
-	border-bottom: 1px solid #555555;
-	background-color: #BEBEBE;
-
 }
 .menu{
 	width: 45%;
@@ -41,7 +33,7 @@ nav{
 .menu li:first-child{
 	border-left: none;
 }
-.menu li:first-child: hover{
+.menu li:first-child:hover{
 	border-left: none;
 }
 .menu li a{
@@ -119,7 +111,7 @@ h3 {
 .conte .procesador{
 	background: #CECECE;
 
-
+	
 }
 .informacion h4{
 	font-family: sans-serif;
@@ -169,7 +161,7 @@ body{
 	background: #fff;
 	height: 50px;
 	width: 100%;
-
+	
 }
 .redes1{
 	float: right;
@@ -183,4 +175,86 @@ body{
 .banner1{
 	width: 100%;
 	height: 440px;
+	
+}
+
+
+
+/* NAV BAR STYLE */
+
+nav{
+	width: 100%;
+	background-color: #fff;
+	border-bottom: solid 3px #1c4d964f;
+
+}
+.flex-line{
+	display: flex;
+	width: 100%;
+	align-items: center;
+}
+.nav-1{
+	justify-content: space-around;
+	a{
+	text-decoration: none;
+	h1{
+		font-size: 50px;
+		color: #062863;
+	}}
+	form{
+		display: flex;
+		width: 30rem;
+		align-items: stretch;
+		justify-content: center;
+		button{
+			border-radius: 0px 0.5rem 0.5rem 0px;
+			border: none;
+			font-size: 16px;
+		}
+	}
+	input{
+		border-radius: 0.5rem 0rem 0rem 0.5rem;
+		width: 75%;
+		padding: 1px 5px;
+		font-size: 18px;
+		border: solid 3px #1c4c96;
+		box-shadow: 3px 3px 0px 0px #00000082;
+	}
+	button{
+		border-radius: 5px;
+		padding: 2px 9px;
+		border: none;
+		color: white;
+		background-color: #1c4c96;
+		box-shadow: 3px 3px 0px 0px #00000082;
+	}
+	button:hover{
+		background-color: #607ec9;
+		}
+}
+.nav-2{
+	justify-content: center;
+	margin-bottom: 0px;
+	button{
+		text-decoration: none;
+		font-size: 20px;
+		padding: 4px 12px;
+		border: none;
+		color: white;
+		background-color: #1c4c96;
+		
+	}
+	.lt-nav-1{
+		border-radius: 8px 0px 0px 0px;
+		border-right: solid 2px rgb(255, 255, 255);
+	}
+	.lt-nav-2{
+		border-right: solid 2px rgb(255, 255, 255);
+	}
+	.lt-nav-3{
+		border-radius: 0px 8px 0px 0px;
+	}
+	button:hover{
+		background-color: #607ec9;
+		}
 }
